--- a/msrc_gui/mainwindow.ui
+++ b/msrc_gui/mainwindow.ui
@@ -72,9 +72,9 @@
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>-764</y>
-             <width>721</width>
-             <height>1836</height>
+             <y>0</y>
+             <width>603</width>
+             <height>1807</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout">
@@ -120,6 +120,47 @@
                   <string>Refresh rate (ms)</string>
                  </property>
                  <layout class="QGridLayout" name="gridLayout_5">
+                  <item row="0" column="1">
+                   <widget class="QSpinBox" name="sbRpmRate">
+                    <property name="maximum">
+                     <number>1500</number>
+                    </property>
+                    <property name="singleStep">
+                     <number>100</number>
+                    </property>
+                    <property name="value">
+                     <number>100</number>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="4" column="0">
+                   <widget class="QLabel" name="label_25">
+                    <property name="text">
+                     <string>GPS</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="5" column="0">
+                   <widget class="QLabel" name="label_5">
+                    <property name="text">
+                     <string>Consumption</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="6" column="0">
+                   <widget class="QLabel" name="label_28">
+                    <property name="text">
+                     <string>Vario</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="2" column="0">
+                   <widget class="QLabel" name="label_18">
+                    <property name="text">
+                     <string>Current</string>
+                    </property>
+                   </widget>
+                  </item>
                   <item row="2" column="1">
                    <widget class="QSpinBox" name="sbCurrentRate">
                     <property name="maximum">
@@ -133,17 +174,43 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="1" column="0">
-                   <widget class="QLabel" name="label_17">
-                    <property name="text">
-                     <string>Voltage</string>
+                  <item row="5" column="1">
+                   <widget class="QSpinBox" name="sbConsumptionRate">
+                    <property name="maximum">
+                     <number>1500</number>
+                    </property>
+                    <property name="singleStep">
+                     <number>100</number>
+                    </property>
+                    <property name="value">
+                     <number>100</number>
                     </property>
                    </widget>
                   </item>
-                  <item row="2" column="0">
-                   <widget class="QLabel" name="label_18">
+                  <item row="3" column="0">
+                   <widget class="QLabel" name="label_19">
                     <property name="text">
-                     <string>Current</string>
+                     <string>Temperature</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="7" column="1">
+                   <widget class="QSpinBox" name="sbAirspeedRate">
+                    <property name="maximum">
+                     <number>1500</number>
+                    </property>
+                    <property name="singleStep">
+                     <number>100</number>
+                    </property>
+                    <property name="value">
+                     <number>100</number>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="7" column="0">
+                   <widget class="QLabel" name="label_30">
+                    <property name="text">
+                     <string>Airspeed</string>
                     </property>
                    </widget>
                   </item>
@@ -156,19 +223,6 @@
                   </item>
                   <item row="4" column="1">
                    <widget class="QSpinBox" name="sbGpsRate">
-                    <property name="maximum">
-                     <number>1500</number>
-                    </property>
-                    <property name="singleStep">
-                     <number>100</number>
-                    </property>
-                    <property name="value">
-                     <number>100</number>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="6" column="1">
-                   <widget class="QSpinBox" name="sbVarioRate">
                     <property name="maximum">
                      <number>1500</number>
                     </property>
@@ -193,15 +247,8 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="4" column="0">
-                   <widget class="QLabel" name="label_25">
-                    <property name="text">
-                     <string>GPS</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="5" column="1">
-                   <widget class="QSpinBox" name="sbConsumptionRate">
+                  <item row="6" column="1">
+                   <widget class="QSpinBox" name="sbVarioRate">
                     <property name="maximum">
                      <number>1500</number>
                     </property>
@@ -210,26 +257,6 @@
                     </property>
                     <property name="value">
                      <number>100</number>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="0" column="1">
-                   <widget class="QSpinBox" name="sbRpmRate">
-                    <property name="maximum">
-                     <number>1500</number>
-                    </property>
-                    <property name="singleStep">
-                     <number>100</number>
-                    </property>
-                    <property name="value">
-                     <number>100</number>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="3" column="0">
-                   <widget class="QLabel" name="label_19">
-                    <property name="text">
-                     <string>Temperature</string>
                     </property>
                    </widget>
                   </item>
@@ -246,37 +273,10 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="7" column="1">
-                   <widget class="QSpinBox" name="sbAirspeedRate">
-                    <property name="maximum">
-                     <number>1500</number>
-                    </property>
-                    <property name="singleStep">
-                     <number>100</number>
-                    </property>
-                    <property name="value">
-                     <number>100</number>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="5" column="0">
-                   <widget class="QLabel" name="label_5">
+                  <item row="1" column="0">
+                   <widget class="QLabel" name="label_17">
                     <property name="text">
-                     <string>Consumption</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="6" column="0">
-                   <widget class="QLabel" name="label_28">
-                    <property name="text">
-                     <string>Vario</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="7" column="0">
-                   <widget class="QLabel" name="label_30">
-                    <property name="text">
-                     <string>Airspeed</string>
+                     <string>Voltage</string>
                     </property>
                    </widget>
                   </item>
@@ -867,13 +867,6 @@
               </layout>
              </widget>
             </item>
-            <item>
-             <widget class="QCheckBox" name="cbDebug">
-              <property name="text">
-               <string>Debug</string>
-              </property>
-             </widget>
-            </item>
            </layout>
           </widget>
          </widget>
@@ -886,49 +879,80 @@
          <enum>QLayout::SetDefaultConstraint</enum>
         </property>
         <item>
-         <spacer name="verticalSpacer">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
+         <widget class="QTabWidget" name="tbViews">
+          <property name="currentIndex">
+           <number>0</number>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QLabel" name="lbCircuit">
-          <property name="minimumSize">
-           <size>
-            <width>500</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>TextLabel</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="verticalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QPushButton" name="btCircuit">
-          <property name="text">
-           <string>Open in window</string>
-          </property>
+          <widget class="QWidget" name="tab">
+           <attribute name="title">
+            <string>Circuit</string>
+           </attribute>
+           <layout class="QVBoxLayout" name="verticalLayout_4">
+            <item>
+             <spacer name="verticalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QLabel" name="lbCircuit">
+              <property name="minimumSize">
+               <size>
+                <width>500</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Circuit image</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btCircuit">
+              <property name="text">
+               <string>Open in window</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="tab_2">
+           <attribute name="title">
+            <string>Debug</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_10">
+            <item row="1" column="0">
+             <widget class="QPushButton" name="btDebug">
+              <property name="text">
+               <string>Enable Debug</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0">
+             <widget class="QPlainTextEdit" name="ptDebug"/>
+            </item>
+           </layout>
+          </widget>
          </widget>
         </item>
        </layout>
